# otus_rust

lesson_11/examples/: basic.rs
lesson_11/src/: house.rs  lib.rs  room.rs
lesson_14/examples/: basic.rs
lesson_14/src/: house.rs  lib.rs  room.rs
lesson_14/src/devices/: mod.rs  socket.rs
lesson_15/: Cargo.toml
lesson_15/socket_client/: Cargo.toml
lesson_15/socket_client/src/: lib.rs
lesson_15/socket_server/: Cargo.toml
lesson_15/socket_server/src/: handler.rs  home.rs
lesson_15/socket_tui/: Cargo.toml
lesson_15/socket_tui/src/: main.rs  state.rs
lesson_17/client/: Cargo.toml
lesson_17/client/src/: main.rs
lesson_17/server/src/: main.rs
lesson_2/: Cargo.toml
lesson_22/: Cargo.toml
lesson_22/client/: Cargo.toml
lesson_22/client/src/: lib.rs
lesson_22/server/: Cargo.toml
lesson_22/server/src/: handler.rs  home.rs  main.rs
lesson_22/stp/examples/: client.rs  (+1 more)
lesson_22/tui/: Cargo.toml
lesson_25/src/: main.rs
lesson_29/: Cargo.toml
lesson_29/src/: main.rs
lesson_32/client/: Cargo.toml
lesson_32/server/: .env  Cargo.toml
lesson_32/server/migrations/2022-09-01-105144_create_house/: down.sql  up.sql
lesson_32/server/migrations/2022-09-01-105230_create_room/: down.sql  up.sql
lesson_32/server/migrations/2022-09-01-105432_create_device/: down.sql  up.sql
lesson_32/server/src/: db.rs  main.rs  models.rs  schema.rs
lesson_33/: Cargo.toml
lesson_33/gui/: Cargo.toml
lesson_33/server/: Cargo.toml
lesson_4/src/: main.rs
lesson_7/src/: main.rs
lesson_8/examples/: basic.rs
lesson_8/src/: house.rs  lib.rs  room.rs
(+12 files in other folders)
