[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
r2d2 = "0.8.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.9.0"
diesel = { version = "2.0.0", features = ["postgres", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
